--- a/README.adoc
+++ b/README.adoc
@@ -111,7 +111,7 @@ the hood.
 [#subsect:license]
 == License
 
-This project is licensed under the MIT License - see the LICENSE.md[LICENSE.md] file for details
+This project is licensed under the MIT License - see link:{license}[LICENSE.md] file for details.
 
 [#subsect:acknowledgments]
 == Acknowledgments
